--- a/package.json
+++ b/package.json
@@ -26,5 +26,10 @@
     "react-dom": "^17.0.1",
     "tailwind": "^4.0.0",
     "typescript": "^4.0.5"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.3.7",
+    "postcss": "^8.3.9",
+    "tailwindcss": "^2.2.16"
   }
 }
